--- a/application/frontend/nginx.conf
+++ b/application/frontend/nginx.conf
@@ -13,15 +13,15 @@ server {
         return 200 "pong";
   }
 
-  location /api/ {
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_http_version 1.1;
+  # location /api/ {
+  #       proxy_set_header X-Forwarded-Host $host;
+  #       proxy_set_header X-Forwarded-Server $host;
+  #       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #       proxy_http_version 1.1;
 
-        rewrite ^/api/(.*) /$1 break;
-        proxy_pass http://api:8000/;
-  }
+  #       rewrite ^/api/(.*) /$1 break;
+  #       proxy_pass http://api:8000/;
+  # }
   
   include /etc/nginx/extra-conf.d/*.conf;
 }
