--- a/application/database/helm/templates/Secret.yaml
+++ b/application/database/helm/templates/Secret.yaml
@@ -5,4 +5,5 @@ metadata:
   namespace: {{ .Values.sharedNamespace }}
 type: Opaque
 stringData:
-  DATABASE_URL: "postgres://postgres:1234@{{ .Release.Name }}-postgresql.{{ .Values.sharedNamespace }}.svc.cluster.local:5432/postgres" # BAAAAAD
+  DATABASE_URL: "postgres://postgres:1234@{{ .Release.Name }}-postgresql-primary.{{ .Values.sharedNamespace }}.svc.cluster.local:5432/postgres" # BAAAAAD
+  DB_HOST: "{{ .Release.Name }}-postgresql-primary.{{ .Values.sharedNamespace }}.svc.cluster.local"
