--- a/application/database/helm/Chart.yaml
+++ b/application/database/helm/Chart.yaml
@@ -31,5 +31,6 @@ sources:
 
 dependencies:
   - name: postgresql
-    version: 15.3.2
+    # version: "16.3.0"
+    version: 15.4.1
     repository: "https://charts.bitnami.com/bitnami"
