--- a/application/helm/application/charts/frontend/Chart.yaml
+++ b/application/helm/application/charts/frontend/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
-name: my-kubernetes-frontend-chart
+# name: my-kubernetes-frontend-chart
+name: frontend-chart
 description: Frontend chart of my-kubernetes
 type: application
 
