--- a/application/helm/application/charts/frontend/templates/HTTPIngressRoute.yaml
+++ b/application/helm/application/charts/frontend/templates/HTTPIngressRoute.yaml
@@ -9,10 +9,10 @@ spec:
   routes:
     - kind: Rule
       match: Host(`{{ .Values.applicationHost }}`) && PathPrefix("/")
+      middlewares:
+        - name: {{ .Values.middleware_tls.name }}
       services:
         - kind: Service
           name: {{ .Values.frontend.service.name }}
           port: {{ .Values.frontend.service.port }}
           scheme: http
-  tls:
-    secretName: {{ .Values.secret_tls.name }}
