--- a/application/helm/application/charts/backend/templates/HTTPIngressRoute.yaml
+++ b/application/helm/application/charts/backend/templates/HTTPIngressRoute.yaml
@@ -5,16 +5,15 @@ metadata:
   namespace: {{ .Values.sharedNamespace }}
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - kind: Rule
       match: Host(`{{ .Values.applicationHost }}`) && PathPrefix(`{{ .Values.backend.middleware.prefix }}`)
       middlewares:
         - name: {{ .Values.backend.middleware.name }}
+        - name: {{ .Values.middleware_tls.name }}
       services:
         - kind: Service
           name: {{ .Values.backend.service.name }}
           port: {{ .Values.backend.service.port }}
           scheme: http
-  tls:
-    secretName: {{ .Values.secret_tls.name }}
