--- a/application/helm/application/charts/frontend/templates/Deployment.yaml
+++ b/application/helm/application/charts/frontend/templates/Deployment.yaml
@@ -48,3 +48,9 @@ spec:
             limits:
               memory: "80Mi"
               cpu: "150m"
+          securityContext:
+            allowPrivilegeEscalation: false
+            privileged: false
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
