--- a/tilt/helm/application/charts/common/values.yaml
+++ b/tilt/helm/application/charts/common/values.yaml
@@ -1,4 +1,6 @@
 sharedNamespace: my-kubernetes-application
+# applicationHost: my-kubernetes.chickenkiller.com
+applicationHost: my-kubernetes.mooo.com
 
 
 secret_tls:
