--- a/tilt/helm/application/charts/backend/values.yaml
+++ b/tilt/helm/application/charts/backend/values.yaml
@@ -1,5 +1,6 @@
 sharedNamespace: my-kubernetes-application
-applicationHost: my-kubernetes.chickenkiller.com
+# applicationHost: my-kubernetes.chickenkiller.com
+applicationHost: my-kubernetes.mooo.com
 
 
 backend:
