--- a/tilt/helm/application/charts/frontend/templates/HTTPIngressRoute.yaml
+++ b/tilt/helm/application/charts/frontend/templates/HTTPIngressRoute.yaml
@@ -5,10 +5,11 @@ metadata:
   namespace: {{ .Values.sharedNamespace }}
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - kind: Rule
-      match: Host(`{{ .Values.applicationHost }}`) && PathPrefix("/")
+      # match: Host(`{{ .Values.applicationHost }}`) && PathPrefix("/")
+      match: PathPrefix("/")
       # middlewares:
       #   - name: {{ .Values.middleware_tls.name }}
       services:
